--- a/src/assets/i18n/es-ES.json
+++ b/src/assets/i18n/es-ES.json
@@ -221,7 +221,7 @@
 		"appearance": {
 			"section": "Apariencia",
 			"title": "Cambia el tema actual",
-			"description": "Elige entre tema oscuro o claro"
+			"description": "Prueba el tema oscuro"
 		},
 		"language": {
 			"title": "Cambia el idioma de la aplicación",
